Hack to solve size of collapsed area

--- a/app/styles/general.css
+++ b/app/styles/general.css
@@ -18,6 +18,9 @@ body{
   padding-top: 50px;
 }
 
+.displayNone {
+  display: none;
+}
 
 /*CHECK IF THEY ARE STILL USED*/
 .fixed {
